plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.flywaydb.flyway' version '10.14.0'
}

group = 'org.sopt'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

sourceSets {
	main.java.srcDirs += querydslDir
}

tasks.withType(JavaCompile).configureEach {
	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

clean {
	delete file(querydslDir)
}

ext {
	set('springCloudVersion', "2023.0.3")
	set('querydslVersion', "6.10.1")
}

flyway {
	url = project.findProperty('flyway.url')
	user = project.findProperty('flyway.user')
	password = project.findProperty('flyway.password')
	baselineOnMigrate = true
	baselineVersion = '0'
	locations = ['classpath:db/migration']
}

dependencies {
	// ✅ Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// ✅ 보안
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// ✅ JPA + DB
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	implementation 'org.postgresql:postgresql'
	implementation "com.mysql:mysql-connector-j:8.4.0"
	implementation 'net.bytebuddy:byte-buddy'
	implementation 'net.bytebuddy:byte-buddy-agent'

	// ✅ Querydsl
	implementation "io.github.openfeign.querydsl:querydsl-jpa:${querydslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${querydslVersion}:jpa"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// ✅ Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// ✅ Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// ✅ JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// ✅ AWS S3, 이미지 메타데이터
	implementation 'software.amazon.awssdk:s3:2.25.22'
	implementation 'com.drewnoakes:metadata-extractor:2.18.0'

	// ✅ DTO 매핑
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	// ✅ Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// ✅ Flyway
	implementation 'org.flywaydb:flyway-core'
//	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.flywaydb:flyway-mysql'

	// ✅ Feign Client
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// ✅ Apple 로그인
	implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'

	// ✅ Spring Retry
	implementation 'org.springframework.retry:spring-retry'
	implementation 'org.springframework:spring-aspects'

	// ✅ 개발 편의
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// ✅ 모니터링
	implementation("org.springframework.boot:spring-boot-starter-actuator")
	runtimeOnly("io.micrometer:micrometer-registry-prometheus")

	// ✅ 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation "org.testcontainers:junit-jupiter:1.20.1"
	testImplementation 'com.h2database:h2'
	testImplementation "org.testcontainers:mysql:1.20.1"
}

// Spring Cloud BOM 추가
dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}